<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bh"
    android:elevation="5dp"
    tools:context=".controller.SignupActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="132dp"
        android:layout_height="80dp"
        android:text="@string/tvSignup"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rectangle3"
        android:elevation="4dp"
        android:ems="10"
        android:hint="@string/etLastnameFisrtname"
        android:inputType="textPersonName"
        android:paddingLeft="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle3"
        android:elevation="4dp"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:paddingLeft="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etLoginName"
        app:layout_constraintTop_toBottomOf="@+id/etLoginName" />

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle3"
        android:elevation="4dp"
        android:ems="10"
        android:hint="@string/etPassword2"
        android:inputType="textPassword"
        android:paddingLeft="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etLoginName"
        android:layout_width="340dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle3"
        android:elevation="4dp"
        android:ems="10"
        android:hint="@string/etLoginName"
        android:inputType="textPersonName"
        android:paddingLeft="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etFullName"
        app:layout_constraintTop_toBottomOf="@+id/etFullName" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button_login"
        android:elevation="8dp"
        android:text="Đăng ký"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

</androidx.constraintlayout.widget.ConstraintLayout>